--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -21,3 +21,17 @@ jobs:
           MERGE_LABELS: ""
           MERGE_METHOD: "squash"
           BASE_BRANCHES: "main"
+ IFS=', ' read -r -a changed_files_array <<< "$ALL_CHANGED_FILES"
+  echo "All changed files: $changed_files_array"
+  echo "All changed files length: ${#changed_files_array[@]}"
+  
+  if [ ${#changed_files_array[@]} -ne 1 ]; then
+      echo "Error: Array should contain exactly one file name."
+      exit 1
+  fi
+  
+  file_name="${changed_files_array[0]}"
+  if [[ ! "$file_name" =~ ^app_chains.*\.json$ ]]; then
+      echo "Error: Only a '.json' file must be added in the app_chains folder."
+      exit 1
+  fi
