--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -31,7 +31,7 @@ jobs:
   fi
   
   file_name="${changed_files_array[0]}"
-  if [[ ! "$file_name" =~ ^app_chains.*\.json$ ]]; then
+  if [[ ! "$file_name" =~ ^64a8eeeb-25a5-4730-bfb3-9192ead551f4.*\.json$ ]]; then
       echo "Error: Only a '.json' file must be added in the app_chains folder."
       exit 1
   fi
