--- a/.github/workflows/check-file-changes.yml
+++ b/.github/workflows/check-file-changes.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
         run: |
-         IFS=', ' read -r -a changed_files_array <<< "$ALL_CHANGED_FILES"
+           IFS=', ' read -r -a changed_files_array <<< "$ALL_CHANGED_FILES"
   echo "All changed files: $changed_files_array"
   echo "All changed files length: ${#changed_files_array[@]}"
   
@@ -27,7 +27,7 @@ jobs:
   fi
   
   file_name="${changed_files_array[0]}"
-  if [[ ! "$file_name" =~ ^42a2e2f1-d685-4cf3-8a4d-c0560026a394.*\.json$ ]]; then
+  if [[ ! "$file_name" =~ ^app_chains.*\.json$ ]]; then
       echo "Error: Only a '.json' file must be added in the app_chains folder."
       exit 1
   fi
