--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run prettier
         run: |-
-          npx prettier --rewrite .
+          npx prettier --write .
 
   validate-entry:
     name: Validate entries
