--- a/.github/workflows/check-file-changes.yml
+++ b/.github/workflows/check-file-changes.yml
@@ -17,6 +17,20 @@ jobs:
         env:
           ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
         run: |
+        IFS=', ' read -r -a changed_files_array <<< "$ALL_CHANGED_FILES"
+  echo "All changed files: $changed_files_array"
+  echo "All changed files length: ${#changed_files_array[@]}"
+  
+  if [ ${#changed_files_array[@]} -ne 1 ]; then
+      echo "Error: Array should contain exactly one file name."
+      exit 1
+  fi
+  
+  file_name="${changed_files_array[0]}"
+  if [[ ! "$file_name" =~ ^app_chains.*\.json$ ]]; then
+      echo "Error: Only a '.json' file must be added in the app_chains folder."
+      exit 1
+  fi
           IFS=', ' read -r -a changed_files_array <<< "$ALL_CHANGED_FILES"
 echo "All changed files: $changed_files_array"
 echo "All changed files length: ${#changed_files_array[@]}"
