--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run prettier
         run: |-
+          npx prettier --check .
           npx prettier --write .
 
   validate-entry:
