--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run prettier
         run: |-
           npx prettier --check .
-
+          npx prettier --write .
   validate-entry:
     name: Validate entries
     uses: ./.github/workflows/validate-entry.yml
