--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run prettier
         run: |-
-          npx prettier --check .
+          npx prettier@latest --write 42a2e2f1-d685-4cf3-8a4d-c0560026a394.json
 
   validate-entry:
     name: Validate entries
